# libForC

./: CMakeLists.txt  README.md
src/main/clib/: lfcTimerfd.c  lfcTimerfd.h
src/main/collection/: lfcBitset.c  lfcBitset.h  lfcByteBuffer.c  lfcByteBuffer.h  lfcHashmap.c  lfcHashmap.h  lfcIIterable.c  lfcIIterable.h  lfcList.c  lfcList.h  lfcQueue.c  lfcQueue.h  lfcTuple.c  lfcTuple.h
src/main/core/: lfcClosure.h  lfcCore.c  lfcCore.h  lfcEndian.h  lfcIface.h  lfcObject.c  lfcObject.h
src/main/data/: lfcStringBuilder.c  lfcStringBuilder.h  lfcStringOps.c  lfcStringOps.h
src/main/io/: lfcIOOps.c  lfcIOOps.h  lfcMXMLParser.c  lfcMXMLParser.h
src/main/ipc/: lfcMQueueReceiver.c  lfcMQueueReceiver.h  lfcMQueueSender.c  lfcMQueueSender.h  lfcMessage.c  lfcMessage.h
src/main/mem/: lfcMemPool.c  lfcMemPool.h
src/main/net/: lfcSocket.c  lfcSocket.h  lfcSocketHandler.c  lfcSocketHandler.h  lfcSocketJob.c  lfcSocketJob.h  lfcSocketJobAcceptConn.c  lfcSocketJobAcceptConn.h  lfcSocketJobReader.c  lfcSocketJobReader.h  lfcSocketJobReaderStream.c  lfcSocketJobReaderStream.h  lfcSocketJobWriter.c  lfcSocketJobWriter.h
src/main/testing/: lfcBCUnitHelper.c  lfcBCUnitHelper.h  lfcCriterionHelper.c  lfcCriterionHelper.h  lfcCriterionObject.h
src/main/thread/: lfcThreadMisc.c  lfcThreadMisc.h  lfcThreadPool.h
src/main/threading/: lfcActor.c  lfcActor.h  lfcActorMessage.c  lfcActorMessage.h  lfcActorRef.c  lfcActorRef.h  lfcActorSystem.c  lfcActorSystem.h  lfcThreadMisc.h  lfcThreadPool.c  lfcThreadPool.h
src/main/threading/actor/: lfcActor.c  lfcActor.h  lfcActorMessage.c  lfcActorMessage.h  lfcActorRef.c  lfcActorRef.h  lfcActorSystem.c  lfcActorSystem.h  lfcActorSystemHandler.c  lfcActorSystemHandler.h  lfcActorSystemRemoteConnector.c  lfcActorSystemRemoteConnector.h  lfcRemoteActorSystem.c  lfcRemoteActorSystem.h
src/main/tools/: lfcLogInstance.c  lfcLogInstance.h  lfcLogger.c  lfcLogger.h  lfcOptParser.c  lfcOptParser.h  lfcOptParserCmd.c  lfcOptParserCmd.h  lfcOptParserParam.c  lfcOptParserParam.h
src/main/tools/logging/: .lfcLogCommon.h@neomake_19913_15.h  .lfcLogHandler.h@neomake_26712_59.h  lfcLog.c  lfcLog.h  lfcLogAppender.c  lfcLogAppender.h  lfcLogCommon.c  lfcLogCommon.h  lfcLogConsoleAppender.c  lfcLogConsoleAppender.h  lfcLogFormatter.c  lfcLogFormatter.h  lfcLogHandler.c  lfcLogHandler.h  lfcLogSyslogAppender.c  lfcLogSyslogAppender.h  lfcLogger.c  lfcLogger.h
src/test/: runner.c
src/test/__needed_libs__/32bit/: libcriterion.so.3.1.0  libmxml.so.1.4
src/test/__needed_libs__/64bit/: libcriterion.so.3.1.0
src/test/collection/lfcBitset/: spec_lfcBitset_clear.c  spec_lfcBitset_count.c  spec_lfcBitset_ctor.c  spec_lfcBitset_ctor_withBits.c  spec_lfcBitset_get.c  spec_lfcBitset_set.c  spec_lfcBitset_toggle.c
src/test/collection/lfcByteBuffer/: spec_lfcByteBuffer_capacity.c  spec_lfcByteBuffer_ctor.c  spec_lfcByteBuffer_init_fromArray.c  spec_lfcByteBuffer_init_wArray.c  spec_lfcByteBuffer_isEmpty.c  spec_lfcByteBuffer_nonEmpty.c  spec_lfcByteBuffer_read_int16.c  spec_lfcByteBuffer_read_int32.c  spec_lfcByteBuffer_read_int64.c  spec_lfcByteBuffer_read_int8.c  spec_lfcByteBuffer_read_int8ptr.c  spec_lfcByteBuffer_read_uint16.c  spec_lfcByteBuffer_read_uint32.c  spec_lfcByteBuffer_read_uint64.c  spec_lfcByteBuffer_read_uint8.c  spec_lfcByteBuffer_toArray.c  spec_lfcByteBuffer_write_int16.c  spec_lfcByteBuffer_write_int32.c  spec_lfcByteBuffer_write_int64.c  spec_lfcByteBuffer_write_int8.c  spec_lfcByteBuffer_write_int8ptr.c  spec_lfcByteBuffer_write_uint16.c  spec_lfcByteBuffer_write_uint32.c  spec_lfcByteBuffer_write_uint64.c  spec_lfcByteBuffer_write_uint8.c
src/test/collection/lfcHashmap/: spec_lfcHashmap__lfcIIterable_count.c  spec_lfcHashmap__lfcIIterable_exists.c  spec_lfcHashmap__lfcIIterable_filter.c  spec_lfcHashmap__lfcIIterable_filterNot.c  spec_lfcHashmap__lfcIIterable_find.c  spec_lfcHashmap__lfcIIterable_foreach.c  spec_lfcHashmap__lfcIIterable_head.c  spec_lfcHashmap__lfcIIterable_isEmpty.c  spec_lfcHashmap__lfcIIterable_last.c  spec_lfcHashmap__lfcIIterable_map.c  spec_lfcHashmap__lfcIIterable_nonEmpty.c  spec_lfcHashmap_clear.c  spec_lfcHashmap_ctor.c  spec_lfcHashmap_ctorWithSize.c  spec_lfcHashmap_dtor.c  spec_lfcHashmap_get.c  spec_lfcHashmap_methods.c  spec_lfcHashmap_put.c  spec_lfcHashmap_remove.c  spec_lfcHashmap_wIntKeys.c  spec_lfcHashmap_wStringKeys.c
src/test/collection/lfcList/: spec_lfcList__lfcIIterable_count.c  spec_lfcList__lfcIIterable_exists.c  spec_lfcList__lfcIIterable_filter.c  spec_lfcList__lfcIIterable_filterNot.c  spec_lfcList__lfcIIterable_find.c  spec_lfcList__lfcIIterable_foreach.c  spec_lfcList__lfcIIterable_head.c  spec_lfcList__lfcIIterable_isEmpty.c  spec_lfcList__lfcIIterable_last.c  spec_lfcList__lfcIIterable_map.c  spec_lfcList__lfcIIterable_next.c  spec_lfcList__lfcIIterable_nonEmpty.c  spec_lfcList_add.c  spec_lfcList_bubbleSort.c  spec_lfcList_clear.c  spec_lfcList_ctor.c  spec_lfcList_ctorWithSize.c  spec_lfcList_dtor.c  spec_lfcList_getAt.c  spec_lfcList_indexOf.c  spec_lfcList_insertAt.c  spec_lfcList_methods.c  spec_lfcList_mkString.c  spec_lfcList_remove.c  spec_lfcList_removeAt.c
src/test/collection/lfcQueue/: spec_lfcQueue_clear.c  spec_lfcQueue_ctor.c  spec_lfcQueue_ctorWithSize.c  spec_lfcQueue_dequeue.c  spec_lfcQueue_dtor.c  spec_lfcQueue_enqueue.c  spec_lfcQueue_lfcIIterable_count.c  spec_lfcQueue_lfcIIterable_exists.c  spec_lfcQueue_lfcIIterable_filter.c  spec_lfcQueue_lfcIIterable_filterNot.c  spec_lfcQueue_lfcIIterable_find.c  spec_lfcQueue_lfcIIterable_foreach.c  spec_lfcQueue_lfcIIterable_head.c  spec_lfcQueue_lfcIIterable_isEmpty.c  spec_lfcQueue_lfcIIterable_last.c  spec_lfcQueue_lfcIIterable_map.c  spec_lfcQueue_lfcIIterable_nonEmpty.c  spec_lfcQueue_methods.c
src/test/core/: spec_lfcObject_asInstanceOf.c  spec_lfcObject_isInstanceOf.c  spec_lfcObject_new.c
src/test/core/lfcCore/: spec_lfcCore_lfcCORE_VARGSCOUNT_TUPLE1.c  spec_lfcCore_lfcCORE_VARGSCOUNT_ZEROorVIELE.c
src/test/core/mocks/: ClassA.c  ClassA.h
src/test/data/lfcStringOps/: spec_lfcStringOps_replace.c
(+84 files in other folders)
